--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.32.2",
     "@tailwindcss/cli": "^4.1.10",
     "axios": "^1.12.2",
     "humanize-duration": "^3.33.0",
@@ -24,7 +23,7 @@
     "react-router-dom": "^7.6.2",
     "react-simple-star-rating": "^5.1.7",
     "react-youtube": "^10.1.0",
-    "uniqid": "^5.4.0"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
